trying to fix layout shift

--- a/src/_includes/css/styles.css
+++ b/src/_includes/css/styles.css
@@ -142,8 +142,6 @@ article li + li {
   place-content: center;
   overflow: hidden;
   text-align: center;
-  aspect-ratio: 16/9;
-  object-fit: cover;
 }
 
 .grid-hero > * {
